--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,344 @@
-/* место для вашего кода */
+body {
+  display: grid;
+  max-width: 1100px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.header {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr min-content 1fr;
+  font-size: 18px;
+  padding: 94px 50px;
+}
+
+.header__menu {
+  line-height: 100%;
+}
+
+.header__links-list {
+  grid-column: 1;
+  display: inline-grid;
+  grid-template-columns: repeat(3, min-content);
+  list-style-position: outside;
+  gap: 1.6em;
+  white-space: nowrap;
+  list-style: circle;
+}
+
+.header__link {
+  text-decoration: none;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  padding-left: 5px;
+}
+
+.header__links-list .header__links-list-item:first-child {
+  list-style: none;
+  padding-left: 0;
+}
+
+.menu-link_active {
+  text-decoration: none;
+  padding-left: 0;
+}
+
+.header__logo {
+  grid-column: 2;
+}
+
+.header__logo-image {
+  height: 105px;
+  width: auto;
+}
+
+.address {
+  height: 98px;
+  width: 240px;
+  grid-column: 3;
+  justify-self: end;
+  line-height: 24.3px;
+  font-style: normal;
+}
+
+.phon_email {
+  text-decoration: none;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.cover {
+  width: 1100px;
+  height: 757px;
+  display: flex;
+  text-align: center;
+  background-image: url(../images/cover.jpg);
+  background-size: 110% 100%;
+  background-position: right bottom;
+}
+
+.overlay {
+  position: relative;
+  background-color: rgb(0 0 0 / 0.6);
+  background-size: contain;
+  z-index: 1;
+  width: 100%;
+  height: max-content;
+}
+
+.cover__title {
+  text-align: left;
+  letter-spacing: 0.3em;
+  padding: 165px 50px 0 50px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 100px;
+}
+
+.aligned-text {
+  height: 115px;
+  text-align: start;
+}
+
+.aligned-text_center {
+  height: 115px;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+  padding-left: 25px;
+}
+
+.aligned-text_right {
+  height: 115px;
+  display: block;
+  text-align: right;
+  margin-top: 20px;
+  padding-right: 0;
+}
+
+.letter-spacing-extended {
+    word-spacing: -0.55em;
+}
+
+.no-letter-spacing {
+  text-align: right;
+  letter-spacing: normal;
+  margin: 0;
+}
+
+.white__text {
+  color: #fff;
+}
+
+.cover__description {
+  display: flex;
+  text-transform: uppercase;
+  justify-content: space-between;
+  align-items: center;
+  padding: 106px 50px 50px 50px;
+}
+
+.cover__description-text {
+  font-size: 22px;
+  word-spacing: 0.85em;
+}
+
+.bet-button {
+  text-transform: uppercase;
+  background: transparent;
+  border: 1px solid white;
+  padding: 12px 32px;
+  font-size: 22px;
+}
+
+.lots {
+  display: block;
+  padding: 180px 23px 120px 23px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  width: 700;
+  padding-left: 40px;
+  padding-bottom: 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+  padding: 48px 40px;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card h3 {
+  font-size: 22px;
+  font-style: normal;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+.card p {
+  font-size: 20px;
+  color: #fff;
+  font-style: normal;
+  list-style: circle;
+  font-weight: 200;
+  line-height: 120%;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  font-weight: 100;
+  text-transform: none;
+  padding-left: 40px;
+  text-underline-offset: 5px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0 25px;
+  height: 595px;
+  width: 1052px;
+  align-items: center;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.about__round__logo {
+  height: 240px;
+  width: 240px;
+  grid-column: 1/2;
+  grid-row: 1 /2;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.about__list {
+  grid-column: 2/3;
+  grid-row: 1 /3;
+  align-items: flex-end;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: auto;
+}
+
+.about__title {
+  font-size: 40px;
+  text-transform: uppercase;
+  padding-top: 130px;
+  padding-bottom: 100px;
+}
+
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  padding-right: 5px;
+}
+
+.footer {
+  height: 180px;
+  width: 1100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  margin-top: 180px;
+}
+
+.footer__address {
+  grid-column: 1;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  justify-self: flex-start;
+  align-self: flex-start;
+  margin-left: 50px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu {
+  grid-column: 2;
+  text-align: center;
+  align-self: flex-start;
+  font-size: 18px;
+}
+
+.footer__menu-list {
+  list-style-type: none;
+  text-underline-offset: 4px;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__social-list {
+  grid-column: 3;
+  display: flex;
+  justify-self: flex-end;
+  align-self: flex-start;
+  list-style-type: none;
+  width: 240px;
+  height: 48px;
+  justify-content: space-between;
+  align-content: flex-end;
+  margin: 1px 50px 0 0;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
