--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@ body {
   font-weight: 400;
   text-decoration: none;
 }
+.text__underline {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
 
 .header {
   display: grid;
@@ -29,8 +33,6 @@ body {
 
 .header__link {
   text-decoration: none;
-  text-decoration: underline;
-  text-underline-offset: 4px;
   padding-left: 5px;
 }
 
@@ -60,12 +62,6 @@ body {
   justify-self: end;
   line-height: 24.3px;
   font-style: normal;
-}
-
-.phon_email {
-  text-decoration: none;
-  text-decoration: underline;
-  text-underline-offset: 4px;
 }
 
 .cover {
@@ -202,7 +198,6 @@ body {
   font-style: normal;
   text-transform: uppercase;
   color: #fff;
-  text-decoration: underline;
   font-weight: 600;
 }
 
@@ -238,7 +233,6 @@ body {
   font-weight: 100;
   text-transform: none;
   padding-left: 40px;
-  text-underline-offset: 5px;
 }
 
 .about {
@@ -308,7 +302,6 @@ body {
   justify-self: flex-start;
   align-self: flex-start;
   margin-left: 50px;
-  text-underline-offset: 4px;
 }
 
 .footer__menu {
@@ -320,7 +313,6 @@ body {
 
 .footer__menu-list {
   list-style-type: none;
-  text-underline-offset: 4px;
   padding: 0;
   margin: 0;
 }
