--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
 }
 .text__underline {
   text-decoration: underline;
-  text-underline-offset: 5px;
+  text-underline-offset: 4px;
 }
 
 .header {
@@ -19,15 +19,13 @@ body {
 
 .header__menu {
   line-height: 100%;
+  justify-content: space-between;
 }
 
 .header__links-list {
   grid-column: 1;
-  display: inline-grid;
-  grid-template-columns: repeat(3, min-content);
-  list-style-position: outside;
+  display: inline-flex;
   gap: 1.6em;
-  white-space: nowrap;
   list-style: circle;
 }
 
@@ -56,7 +54,6 @@ body {
 }
 
 .address {
-  height: 98px;
   width: 240px;
   grid-column: 3;
   justify-self: end;
@@ -66,11 +63,11 @@ body {
 
 .cover {
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   display: flex;
   text-align: center;
   background-image: url(../images/cover.jpg);
-  background-size: 110% 100%;
+  background-size: cover;
   background-position: right bottom;
 }
 
@@ -114,7 +111,7 @@ body {
 }
 
 .letter-spacing-extended {
-    word-spacing: -0.55em;
+  word-spacing: -0.55em;
 }
 
 .no-letter-spacing {
@@ -143,7 +140,7 @@ body {
 .bet-button {
   text-transform: uppercase;
   background: transparent;
-  border: 1px solid white;
+  border: 1px solid currentColor;
   padding: 12px 32px;
   font-size: 22px;
 }
@@ -156,7 +153,7 @@ body {
 .lots__heading {
   font-size: 40px;
   text-transform: uppercase;
-  width: 700;
+  font-weight: 700;
   padding-left: 40px;
   padding-bottom: 27px;
 }
@@ -188,7 +185,6 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
-  overflow: hidden;
   flex-direction: column;
   align-items: center;
 }
@@ -210,22 +206,21 @@ body {
   line-height: 120%;
 }
 
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
+.card_type_style {
   background-position: center;
   background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .lots__look-more-link {
@@ -240,7 +235,6 @@ body {
   grid-template-columns: 334px 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 0 25px;
-  height: 595px;
   width: 1052px;
   align-items: center;
   margin-left: 24px;
@@ -263,7 +257,7 @@ body {
 .about__list {
   grid-column: 2/3;
   grid-row: 1 /3;
-  align-items: flex-end;
+  padding-top: 136px;
 }
 
 .about__logo-image {
@@ -274,19 +268,23 @@ body {
 .about__title {
   font-size: 40px;
   text-transform: uppercase;
-  padding-top: 130px;
   padding-bottom: 100px;
 }
 
 .about__text {
   font-size: 20px;
   font-weight: 400;
+}
+.about__text p {
+  margin-bottom: 24px;
   line-height: 24px;
-  padding-right: 5px;
+}
+
+.about__text p:last-child {
+  margin-bottom: 0px;
 }
 
 .footer {
-  height: 180px;
   width: 1100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -324,7 +322,6 @@ body {
   align-self: flex-start;
   list-style-type: none;
   width: 240px;
-  height: 48px;
   justify-content: space-between;
   align-content: flex-end;
   margin: 1px 50px 0 0;
