--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,9 @@ body {
   text-decoration: none;
 }
 .text__underline {
-  text-decoration: underline;
+  border-bottom: 1;
   text-underline-offset: 4px;
+
 }
 
 .header {
@@ -14,12 +15,12 @@ body {
   align-items: center;
   grid-template-columns: 1fr min-content 1fr;
   font-size: 18px;
-  padding: 94px 50px;
+  padding: 91px 50px;
 }
 
 .header__menu {
-  line-height: 100%;
   justify-content: space-between;
+  padding-bottom: 5px;
 }
 
 .header__links-list {
@@ -30,7 +31,6 @@ body {
 }
 
 .header__link {
-  text-decoration: none;
   padding-left: 5px;
 }
 
@@ -57,12 +57,11 @@ body {
   width: 240px;
   grid-column: 3;
   justify-self: end;
-  line-height: 24.3px;
+  line-height: 24.5px;
   font-style: normal;
 }
 
 .cover {
-  width: 1100px;
   min-height: 757px;
   display: flex;
   text-align: center;
@@ -99,7 +98,7 @@ body {
   display: block;
   text-align: center;
   margin-top: 20px;
-  padding-left: 25px;
+  padding-left: 28px;
 }
 
 .aligned-text_right {
@@ -192,9 +191,11 @@ body {
 .card h3 {
   font-size: 22px;
   font-style: normal;
+  text-decoration: underline;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
+  text-decoration-thickness: 0.5px;
 }
 
 .card p {
@@ -284,7 +285,6 @@ body {
 }
 
 .footer {
-  width: 1100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
