--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
   text-decoration: none;
 }
 .text__underline {
-  border-bottom: 1;
+
   text-underline-offset: 4px;
 
 }
@@ -25,13 +25,13 @@ body {
 
 .header__links-list {
   grid-column: 1;
-  display: inline-flex;
-  gap: 1.6em;
+  display: flex;
+  column-gap: 1.5em;
   list-style: circle;
 }
 
 .header__link {
-  padding-left: 5px;
+  padding-left: 7px;
 }
 
 .header__links-list .header__links-list-item:first-child {
@@ -286,6 +286,8 @@ body {
   grid-column: 1;
   font-size: 18px;
   font-weight: 400;
+
+  width: 265px;
   font-style: normal;
   justify-self: flex-start;
   align-self: flex-start;
